Version 0.5.1
------------------------------------------------------------

  * Added 'enumerate', a function that works like 'lapply'
    but also allows the user to pass an index as the
    second argument to the function.

Version 0.5.0
------------------------------------------------------------

A large number of new functions have been added; please feel
free to explore the index and run examples with 'example(<fun>)'
for example usage / use-cases.

  * 'Kmisc.knit2html' knits an .Rmd file to HTML using Kmisc's
    set of CSS, JavaScript styling. Styles are borrowed and
    modified from Twitter Bootstrap, and theme is inspired
    from Tommorrow Night Bright.
  * Added a utility wrapped to 'awk'; useful for calling
    'awk' directly from the command line. The path to
    'awk' can be set with 'awk.set'.
  * Added 'chunk', a function for generating 'chunks' of
    indices. Eg. chunk(1, 4, size=2) returns the list
    list(chunk1=c(1, 2), chunk2=c(3, 4)).
  * Added 'rowApply', 'colApply' wrappers that aim to behave
    like versions of 'apply' for matrices. A 'drop' argument
    is added to control whether dimension dropping occurs.
  * Added 'counts', a fast Rcpp-backed version of table for 
    1D vectors.
  * Added 'duplicate', a function that explicitly forces a 
    copy of an R object.
  * Utility functions for extracting and splitting tabular files:
    'extract_rows_from_file' extracts rows from a tabular file
    where a column meets some criteria (avoiding reading the whole
    item into memory)
  * 'factor_' is a faster implementation of 'factor', but with
    less flexibility (currently only allows for a levels argument)
  * 'htmlTable' wraps around `knitr::kable`, but allows the user
    to include HTML attributes (class, id, style...)
  * 'labeller' allows users to modify axis labels in a ggplot2 plot.
  * 'list2df' allows for the fast coercion from R lists to data.frames.
  * 'manhattan_plot' produces the typical manhattan plot as seen