@@ -30,78 +30,3 @@ Suggests:
     rbenchmark
 ByteCompile: TRUE
 VignetteBuilder: knitr
-Collate:
-    'ChangeLog.R'
-    'Kmisc-md2html.R'
-    'Kmisc-package.R'
-    'Rcpp.gallery.skeleton.R'
-    'RcppExports.R'
-    'Rcpp_gen_makevars.R'
-    'addDebugOutput.R'
-    'anat.R'
-    'any_na.R'
-    'apply.R'
-    'awk.R'
-    'bwplot2.R'
-    'chunk.R'
-    'cite_package.R'
-    'clang_format.R'
-    'clean_doc.R'
-    'copy.R'
-    'counts.R'
-    'enumerate.R'
-    'extract.R'
-    'extract_rows_from_file.R'
-    'fast_factor.R'
-    'grid.text2.R'
-    'hex.R'
-    'html.R'
-    'htmlTable.R'
-    'html_attach.R'
-    'html_extras.R'
-    'html_tags.R'
-    'in_interval.R'
-    'is_sorted.R'
-    'labeller.R'
-    'list2mat.R'
-    'list_to_dataframe.R'
-    'manhattan_plot.R'
-    'mat2df.R'
-    'matches.R'
-    'melt_.R'
-    'misc.R'
-    'name1.R'
-    'nametree.R'
-    'overwrite.R'
-    'pMerge.R'
-    'pad.R'
-    'par.reset.R'
-    'pp_plot.R'
-    'prepare_package.R'
-    'pymat.R'
-    'rcpp_apply_generator.R'
-    'rcpp_tapply_generator.R'
-    'read.R'
-    'regex.R'
-    'registerFunctions.R'
-    'remove_char_digit.R'
-    'silent.R'
-    'simp.R'
-    'size.R'
-    'split_.R'
-    'split_file.R'
-    'split_runs.R'
-    'stack_list.R'
-    'str_collapse.R'
-    'str_rev.R'
-    'str_slice.R'
-    'str_sort.R'
-    'str_split.R'
-    'swap.R'
-    'sys.R'
-    'tapply_.R'
-    'transpose.R'
-    'unmelt.R'
-    'update_date.R'
-    'value_matching.R'
-    'wrap.R'
