@@ -10,7 +10,6 @@ S3method(transpose,list)
 export("%kin%")
 export("%knin%")
 export("%nin%")
-export(ChangeLog)
 export(Kmisc.knit2html)
 export(Rcpp_apply_generator)
 export(Rcpp_tapply_generator)
@@ -27,7 +26,6 @@ export(char2factor)
 export(char_to_factor)
 export(chunk)
 export(cite_package)
-export(clang_format)
 export(clean_doc)
 export(colApply)
 export(counts)
