@@ -7,7 +7,6 @@
 ##' R markdown documents.
 ##' 
 ##' @name Kmisc
-##' @include Kmisc-package.R
 ##' @docType package
 ##' @useDynLib Kmisc, .registration=TRUE
 ##' @seealso \code{\link{html}}
