@@ -1,8 +1,3 @@
-##' Reformat C/C++ Code using clang-format
-##' 
-##' This function requires \code{clang-format} to be in your \code{PATH}.
-##' @rdname clang
-##' @export
 clang_format <- function(
   files=NULL,
   style=c("Chromium", "LLVM", "Google", "Mozilla", "WebKit"),
