@@ -1,12 +1,0 @@
-\name{clang_format}
-\alias{clang_format}
-\title{Reformat C/C++ Code using clang-format}
-\usage{
-clang_format(files = NULL, style = c("Chromium", "LLVM", "Google",
-  "Mozilla", "WebKit"), verbose = FALSE)
-}
-\description{
-This function requires \code{clang-format} to be in your
-\code{PATH}.
-}
-
