@@ -1,7 +1,6 @@
 #include <Rcpp.h>
 #include <iostream>
 #include <fstream>
-#include <string.h>
 
 using namespace Rcpp;
 
